--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=8080
+server.servlet.context-path=/
 
+spring.main.banner-mode=off
+logging.level.org.springframework=ERROR
+
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/socserv
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.jpa.hibernate.ddl-auto = create-drop
+
+spring.datasource.initialization-mode=always
